--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,9 @@
-[env:esp32s3]
+[env:ant_esp32s3]
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
+src_dir = Antihunter/src
 
 build_flags =
   -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -20,12 +21,14 @@ build_flags =
 lib_deps =
   esp32async/ESPAsyncWebServer
   esp32async/AsyncTCP
+  preferences
 
-[env:esp32c3]
+[env:ant_esp32c3]
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 monitor_speed = 115200
+src_dir = Antihunter/src
 build_flags =
  -D ARDUINO_USB_CDC_ON_BOOT=1
  -D ARDUINO_USB_MODE=1
@@ -48,12 +51,101 @@ board_build.partitions = huge_app.csv
 lib_deps =
  esp32async/ESPAsyncWebServer
  esp32async/AsyncTCP
+ preferences
 
-[env:esp32wroom32u]
+[env:ant_esp32wroom32u]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+src_dir = Antihunter/src
+
+build_flags =
+ -D ARDUINO_USB_CDC_ON_BOOT=0
+ -D ARDUINO_USB_MODE=0
+ -D AP_SSID=\"Antihunter\"
+ -D AP_PASS=\"ouispy123\"
+ -D AP_CHANNEL=6
+ -D BUZZER_PIN=18
+ -D BUZZER_IS_PASSIVE=1
+ -D COUNTRY=\"NO\"
+ -D CONFIG_SW_COEXIST_ENABLE=1
+ -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
+ -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
+ -Os
+ -ffunction-sections
+ -fdata-sections
+ -Wl,--gc-sections
+ -DCORE_DEBUG_LEVEL=0
+
+board_build.partitions = huge_app.csv
+
+lib_deps =
+ esp32async/ESPAsyncWebServer
+ esp32async/AsyncTCP
+ preferences
+
+[env:mesh_esp32s3]
+platform = espressif32
+board = seeed_xiao_esp32s3
+framework = arduino
+monitor_speed = 115200
+src_dir = Antihunter_Mesh/src
+
+build_flags =
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
+  -D AP_SSID=\"Antihunter\"
+  -D AP_PASS=\"ouispy123\"
+  -D AP_CHANNEL=6
+  -D BUZZER_PIN=3
+  -D BUZZER_IS_PASSIVE=1
+  -D COUNTRY=\"NO\"
+  -D CONFIG_SW_COEXIST_ENABLE=1
+  -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
+  -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
+
+lib_deps =
+  esp32async/ESPAsyncWebServer
+  esp32async/AsyncTCP
+  preferences
+
+[env:mesh_esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+monitor_speed = 115200
+src_dir = Antihunter_Mesh/src
+build_flags =
+ -D ARDUINO_USB_CDC_ON_BOOT=1
+ -D ARDUINO_USB_MODE=1
+ -D AP_SSID=\"Antihunter\"
+ -D AP_PASS=\"ouispy123\"
+ -D AP_CHANNEL=6
+ -D BUZZER_PIN=3
+ -D BUZZER_IS_PASSIVE=1
+ -D COUNTRY=\"NO\"
+ -D CONFIG_SW_COEXIST_ENABLE=1
+ -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
+ -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
+ -Os
+ -ffunction-sections
+ -fdata-sections
+ -Wl,--gc-sections
+ -DCORE_DEBUG_LEVEL=0
+ -DCONFIG_ARDUHAL_LOG_LEVEL=0
+board_build.partitions = huge_app.csv
+lib_deps =
+ esp32async/ESPAsyncWebServer
+ esp32async/AsyncTCP
+ preferences
+
+[env:mesh_esp32wroom32u]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+src_dir = Antihunter_Mesh/src
 
 build_flags =
  -D ARDUINO_USB_CDC_ON_BOOT=0
