--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,38 @@
-[env:ant_esp32s3]
+[platformio]
+; Point to the base directory where your different 'src' folders are located.
+; Your 'Antihunter' and 'Antihunter_Mesh' folders are directly in the
+; project root (sibling to platformio.ini), so src_dir = . is correct.
+src_dir = .
+
+[env]
+; Common settings for all environments
 platform = espressif32
-board = seeed_xiao_esp32s3
 framework = arduino
 monitor_speed = 115200
-src_dir = Antihunter/src
 
+lib_deps =
+  esp32async/ESPAsyncWebServer
+  esp32async/AsyncTCP
+  preferences
+lib_ignore = WebServer ; Explicitly ignore the conflicting WebServer library
+
+; Removed coexistence flags as they are typically set by the framework and caused warnings.
+; If you encounter WiFi/BLE coexistence issues, you might need to re-evaluate SDKConfig options.
 build_flags =
+  ; -D CONFIG_SW_COEXIST_ENABLE=1
+  ; -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
+  -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
+
+
+[env:ant_esp32s3]
+extends = env
+board = seeed_xiao_esp32s3
+; Explicitly include ONLY the main CPP file for this environment
+build_src_filter =
+    -<*>
+    +<Antihunter/src/main.cpp> ;
+build_flags =
+  ${env.build_flags}
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
   -D AP_SSID=\"Antihunter\"
@@ -14,85 +41,16 @@ build_flags =
   -D BUZZER_PIN=3
   -D BUZZER_IS_PASSIVE=1
   -D COUNTRY=\"NO\"
-  -D CONFIG_SW_COEXIST_ENABLE=1
-  -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
-  -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
 
-lib_deps =
-  esp32async/ESPAsyncWebServer
-  esp32async/AsyncTCP
-  preferences
 
 [env:ant_esp32c3]
-platform = espressif32
+extends = env
 board = seeed_xiao_esp32c3
-framework = arduino
-monitor_speed = 115200
-src_dir = Antihunter/src
+build_src_filter =
+    -<*>
+    +<Antihunter/src/main.cpp> ;
 build_flags =
- -D ARDUINO_USB_CDC_ON_BOOT=1
- -D ARDUINO_USB_MODE=1
- -D AP_SSID=\"Antihunter\"
- -D AP_PASS=\"ouispy123\"
- -D AP_CHANNEL=6
- -D BUZZER_PIN=3
- -D BUZZER_IS_PASSIVE=1
- -D COUNTRY=\"NO\"
- -D CONFIG_SW_COEXIST_ENABLE=1
- -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
- -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
- -Os
- -ffunction-sections
- -fdata-sections
- -Wl,--gc-sections
- -DCORE_DEBUG_LEVEL=0
- -DCONFIG_ARDUHAL_LOG_LEVEL=0
-board_build.partitions = huge_app.csv
-lib_deps =
- esp32async/ESPAsyncWebServer
- esp32async/AsyncTCP
- preferences
-
-[env:ant_esp32wroom32u]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-src_dir = Antihunter/src
-
-build_flags =
- -D ARDUINO_USB_CDC_ON_BOOT=0
- -D ARDUINO_USB_MODE=0
- -D AP_SSID=\"Antihunter\"
- -D AP_PASS=\"ouispy123\"
- -D AP_CHANNEL=6
- -D BUZZER_PIN=18
- -D BUZZER_IS_PASSIVE=1
- -D COUNTRY=\"NO\"
- -D CONFIG_SW_COEXIST_ENABLE=1
- -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
- -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
- -Os
- -ffunction-sections
- -fdata-sections
- -Wl,--gc-sections
- -DCORE_DEBUG_LEVEL=0
-
-board_build.partitions = huge_app.csv
-
-lib_deps =
- esp32async/ESPAsyncWebServer
- esp32async/AsyncTCP
- preferences
-
-[env:mesh_esp32s3]
-platform = espressif32
-board = seeed_xiao_esp32s3
-framework = arduino
-monitor_speed = 115200
-src_dir = Antihunter_Mesh/src
-
-build_flags =
+  ${env.build_flags}
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
   -D AP_SSID=\"Antihunter\"
@@ -101,73 +59,99 @@ build_flags =
   -D BUZZER_PIN=3
   -D BUZZER_IS_PASSIVE=1
   -D COUNTRY=\"NO\"
-  -D CONFIG_SW_COEXIST_ENABLE=1
-  -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
-  -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
+  -Os
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
+  -DCORE_DEBUG_LEVEL=0
+  -DCONFIG_ARDUHAL_LOG_LEVEL=0
+board_build.partitions = huge_app.csv
 
-lib_deps =
-  esp32async/ESPAsyncWebServer
-  esp32async/AsyncTCP
-  preferences
+[env:ant_esp32wroom32u]
+extends = env
+board = esp32dev
+build_src_filter =
+    -<*>
+    +<Antihunter/src/main.cpp> ;
+build_flags =
+  ${env.build_flags}
+  -D ARDUINO_USB_CDC_ON_BOOT=0
+  -D ARDUINO_USB_MODE=0
+  -D AP_SSID=\"Antihunter\"
+  -D AP_PASS=\"ouispy123\"
+  -D AP_CHANNEL=6
+  -D BUZZER_PIN=18
+  -D BUZZER_IS_PASSIVE=1
+  -D COUNTRY=\"NO\"
+  -Os
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
+  -DCORE_DEBUG_LEVEL=0
+
+board_build.partitions = huge_app.csv
+
+[env:mesh_esp32s3]
+extends = env
+board = seeed_xiao_esp32s3
+build_src_filter =
+    -<*>
+    +<Antihunter_Mesh/src/main.cpp> ;
+build_flags =
+  ${env.build_flags}
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
+  -D AP_SSID=\"Antihunter\"
+  -D AP_PASS=\"ouispy123\"
+  -D AP_CHANNEL=6
+  -D BUZZER_PIN=3
+  -D BUZZER_IS_PASSIVE=1
+  -D COUNTRY=\"NO\"
 
 [env:mesh_esp32c3]
-platform = espressif32
+extends = env
 board = seeed_xiao_esp32c3
-framework = arduino
-monitor_speed = 115200
-src_dir = Antihunter_Mesh/src
+build_src_filter =
+    -<*>
+    +<Antihunter_Mesh/src/main.cpp> ;
 build_flags =
- -D ARDUINO_USB_CDC_ON_BOOT=1
- -D ARDUINO_USB_MODE=1
- -D AP_SSID=\"Antihunter\"
- -D AP_PASS=\"ouispy123\"
- -D AP_CHANNEL=6
- -D BUZZER_PIN=3
- -D BUZZER_IS_PASSIVE=1
- -D COUNTRY=\"NO\"
- -D CONFIG_SW_COEXIST_ENABLE=1
- -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
- -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
- -Os
- -ffunction-sections
- -fdata-sections
- -Wl,--gc-sections
- -DCORE_DEBUG_LEVEL=0
- -DCONFIG_ARDUHAL_LOG_LEVEL=0
+  ${env.build_flags}
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
+  -D AP_SSID=\"Antihunter\"
+  -D AP_PASS=\"ouispy123\"
+  -D AP_CHANNEL=6
+  -D BUZZER_PIN=3
+  -D BUZZER_IS_PASSIVE=1
+  -D COUNTRY=\"NO\"
+  -Os
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
+  -DCORE_DEBUG_LEVEL=0
+  -DCONFIG_ARDUHAL_LOG_LEVEL=0
 board_build.partitions = huge_app.csv
-lib_deps =
- esp32async/ESPAsyncWebServer
- esp32async/AsyncTCP
- preferences
 
 [env:mesh_esp32wroom32u]
-platform = espressif32
+extends = env
 board = esp32dev
-framework = arduino
-monitor_speed = 115200
-src_dir = Antihunter_Mesh/src
-
+build_src_filter =
+    -<*>
+    +<Antihunter_Mesh/src/main.cpp> ;
 build_flags =
- -D ARDUINO_USB_CDC_ON_BOOT=0
- -D ARDUINO_USB_MODE=0
- -D AP_SSID=\"Antihunter\"
- -D AP_PASS=\"ouispy123\"
- -D AP_CHANNEL=6
- -D BUZZER_PIN=18
- -D BUZZER_IS_PASSIVE=1
- -D COUNTRY=\"NO\"
- -D CONFIG_SW_COEXIST_ENABLE=1
- -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
- -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
- -Os
- -ffunction-sections
- -fdata-sections
- -Wl,--gc-sections
- -DCORE_DEBUG_LEVEL=0
+  ${env.build_flags}
+  -D ARDUINO_USB_CDC_ON_BOOT=0
+  -D ARDUINO_USB_MODE=0
+  -D AP_SSID=\"Antihunter\"
+  -D AP_PASS=\"ouispy123\"
+  -D AP_CHANNEL=6
+  -D BUZZER_PIN=18
+  -D BUZZER_IS_PASSIVE=1
+  -D COUNTRY=\"NO\"
+  -Os
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
+  -DCORE_DEBUG_LEVEL=0
 
 board_build.partitions = huge_app.csv
-
-lib_deps =
- esp32async/ESPAsyncWebServer
- esp32async/AsyncTCP
- preferences
