keep size down for esp32u
some 4MB devices can handle this...

--- a/platformio.ini
+++ b/platformio.ini
@@ -59,6 +59,12 @@ build_flags =
   -D AP_CHANNEL=6
   -D BUZZER_PIN=18
   -D BUZZER_IS_PASSIVE=1
+  -DCONFIG_BT_NIMBLE_MAX_CONNECTIONS=1
+  -DCONFIG_NIMBLE_MAX_CONNECTIONS=1
+  -DARDUINO_DISABLE_EXCEPTION_HANDLING
+  -fno-exceptions
+  -fno-rtti
+  -DCONFIG_ARDUHAL_LOG_DEFAULT_LEVEL=0
   -D COUNTRY=\"NO\"
   -Os
   -ffunction-sections
