tweak pio & cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,7 @@
 [platformio]
-; Point to the base directory where your different 'src' folders are located.
-; Your 'Antihunter' and 'Antihunter_Mesh' folders are directly in the
-; project root (sibling to platformio.ini), so src_dir = . is correct.
 src_dir = .
 
 [env]
-; Common settings for all environments
 platform = espressif32
 framework = arduino
 monitor_speed = 115200
@@ -14,10 +10,7 @@ lib_deps =
   esp32async/ESPAsyncWebServer
   esp32async/AsyncTCP
   preferences
-lib_ignore = WebServer ; Explicitly ignore the conflicting WebServer library
 
-; Removed coexistence flags as they are typically set by the framework and caused warnings.
-; If you encounter WiFi/BLE coexistence issues, you might need to re-evaluate SDKConfig options.
 build_flags =
   ; -D CONFIG_SW_COEXIST_ENABLE=1
   ; -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=1
@@ -27,7 +20,6 @@ build_flags =
 [env:ant_esp32s3]
 extends = env
 board = seeed_xiao_esp32s3
-; Explicitly include ONLY the main CPP file for this environment
 build_src_filter =
     -<*>
     +<Antihunter/src/main.cpp> ;
@@ -63,14 +55,13 @@ build_flags =
   -DCONFIG_NIMBLE_MAX_CONNECTIONS=1
   -DARDUINO_DISABLE_EXCEPTION_HANDLING
   -fno-exceptions
-  -fno-rtti
-  -DCONFIG_ARDUHAL_LOG_DEFAULT_LEVEL=0
   -D COUNTRY=\"NO\"
   -Os
   -ffunction-sections
   -fdata-sections
   -Wl,--gc-sections
   -DCORE_DEBUG_LEVEL=0
+  #lib_ignore = WebServer
 
 board_build.partitions = huge_app.csv
 
