--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,8 @@ build_flags =
 extends = env
 board = seeed_xiao_esp32s3
 build_src_filter =
-    -<*>
-    +<Antihunter/src/main.cpp> ;
+ -<*>
+ +<Antihunter_Mesh/src/*>
 build_flags =
   ${env.build_flags}
   -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -39,8 +39,8 @@ build_flags =
 extends = env
 board = seeed_xiao_esp32s3
 build_src_filter =
-    -<*>
-    +<Antihunter_Mesh/src/main.cpp> ;
+ -<*>
+ +<Antihunter_Mesh/src/*>
 build_flags =
   ${env.build_flags}
   -D ARDUINO_USB_CDC_ON_BOOT=1
