Improves GPS functionality with TinyGPSPlus
Uses the TinyGPSPlus library for more robust and reliable GPS data parsing.

This change simplifies the GPS data handling process, improves
accuracy, and provides a more user-friendly status display in the
diagnostics output. It also addresses potential issues with
incomplete or malformed NMEA sentences.

The GPS UART is now initialized on Serial2 for better compatibility.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@ lib_deps =
   esp32async/ESPAsyncWebServer
   esp32async/AsyncTCP
   preferences
+  mikalhart/TinyGPSPlus@1.1.0
 
 build_flags =
   ; -D CONFIG_SW_COEXIST_ENABLE=1
