Refactor non-mesh, add v2 build to flasher
- works with OUI-SPY

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,12 +18,12 @@ build_flags =
   -D CONFIG_BT_BLE_DYNAMIC_ENV_MEMORY=1
 
 
-[env:ant_esp32s3]
+[env:AntiHunter]
 extends = env
 board = seeed_xiao_esp32s3
 build_src_filter =
  -<*>
- +<Antihunter_Mesh/src/*>
+ +<Antihunter/src/*>
 build_flags =
   ${env.build_flags}
   -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -36,7 +36,7 @@ build_flags =
   -D COUNTRY=\"NO\"
 
 
-[env:mesh_esp32s3]
+[env:AntiHunter_Mesh]
 extends = env
 board = seeed_xiao_esp32s3
 build_src_filter =
